Representativeness of the sample

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -21,6 +21,7 @@
     "        \t<li><a href=\"#cnae-level3\"><h5>2.4.3. Group (Level 3)</h5></a></li>\n",
     "        \t<li><a href=\"#cnae-level4\"><h5>2.4.4. Class (Level 4)</h5></a></li>\n",
     "        </ul>\n",
+    "        <li><a href=\"#distribution\"><h5>2.5. Evaluating Sample Representativeness</h5></a></li>\n",
     "    </ul>\n",
     "\t<li><a href=\"#conclusion\"><h5>3. Conclusion</h5></a></li>\n",
     "\t<li><a href=\"#references\"><h5>4. References</h5></a></li>\n",
@@ -42,6 +43,7 @@
     "import pandas as pd\n",
     "import matplotlib.cm as cm\n",
     "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import chisquare\n",
     "import matplotlib.colors as mcolors\n",
     "from matplotlib.patches import Polygon\n",
     "from matplotlib.collections import PatchCollection\n",
@@ -84,6 +86,13 @@
     "            <li>Class (CNAE Code): The most specific level, represented by a four-digit code that precisely defines a business activity (e.g., \"1011\" for Processing and Preserving of Meat).</li>\n",
     "        </ol>\n",
     "        <b>Source</b>: <a href=\"https://www.ine.es/dyngs/INEbase/es/operacion.htm?c=Estadistica_C&cid=1254736177032&menu=resultados&idp=1254735976614#_tabs-1254736195862\">ine.es</a>\n",
+    "    </p>\n",
+    "    <h4><b>Main Activity Distribution in Spanish Companies</b></h4>\n",
+    "    <p style=\"text-align: justify;\">\n",
+    "        This dataset contains the actual distribution of the main activity in Spanish companies in the year 2024. It includes the number of companies in each division (level 2 grouping). The objective of this \n",
+    "        dataset is to study whether the sample used in this study is representative of the population.\n",
+    "        <br>\n",
+    "        <b>Source</b>: <a href=\"https://www.ine.es/jaxiT3/Tabla.htm?t=3954&L=0\">ine.es</a>\n",
     "    </p>\n",
     "</div>"
    ]
@@ -296,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -697,23 +706,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h3 style=\"margin-left: 1em;\" id=\"distribution\"><b>2.4. Evaluating Sample Representativeness by CNAE Distribution</b></h3>\n",
+    "<div style=\"margin: 1em;\">\n",
+    "    <p style=\"text-align: justify;\">\n",
+    "        In order to evaluate whether the selected sample is representative of the population, we will perform a Chi-square goodness-of-fit test. This statistical procedure allows us to compare the observed distribution of the sample with the expected distribution based on the population. We will set the significance level at 0.05, meaning that we will accept a 5% risk of rejecting the null hypothesis when it is actually true. The following hypotheses will be tested:\n",
+    "        <ul style = \"list-style-type: none; line-height: 1.5em;\">\n",
+    "            <li><b>Null Hypothesis (H<sub>0</sub>)</b>: The sample is representative of the population, meaning there is no significant difference between the observed and expected distributions.</li>\n",
+    "            <li><b>Alternative Hypothesis (H<sub>1</sub>)</b>: The sample is not representative of the population, indicating a significant difference between the observed and expected distributions.</li>\n",
+    "        </ul>\n",
+    "    </p>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi-Square Test Results:\n",
+      " - Test Statistic (Chi2): 84.618\n",
+      " - p-value: 0.312225\n",
+      " - Degrees of Freedom: 80\n",
+      " - Null Hypothesis: Not Rejected\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Original data distribution\n",
+    "original_distribution = data.load_distribution()\n",
+    "original_distribution.set_index(\"main_activity\", inplace = True)\n",
+    "\n",
+    "# Sample data distribution\n",
+    "level_2 = data.load_with_label(level = 2)\n",
+    "sample_distribution = level_2[\"label\"].value_counts().reset_index()\n",
+    "sample_distribution.columns = [\"main_activity\", \"count\"]\n",
+    "sample_distribution.set_index(\"main_activity\", inplace = True)\n",
+    "\n",
+    "distribution_data = original_distribution.join(sample_distribution, how = \"inner\").reset_index()\n",
+    "distribution_data.columns = [\"activity\", \"original\", \"sample\"]\n",
+    "observed = np.array(distribution_data[\"sample\"].to_list())*100/sum(distribution_data[\"sample\"])\n",
+    "expected = np.array(distribution_data[\"original\"].to_list())*100/sum(distribution_data[\"original\"])\n",
+    "\n",
+    "# Chi-Square goodness-of-fit test\n",
+    "chi2, p_value = chisquare(observed, expected)\n",
+    "print(f\"Chi-Square Test Results:\\n\"\n",
+    "      f\" - Test Statistic (Chi2): {chi2:.3f}\\n\"\n",
+    "      f\" - p-value: {p_value:.6f}\\n\"\n",
+    "      f\" - Degrees of Freedom: {len(observed)}\\n\"\n",
+    "      f\" - Null Hypothesis: {('Rejected' if p_value < 0.05 else 'Not Rejected')}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h2 id=\"conclusion\"><b>3. Conclusion</b></h2>\n",
     "<div style=\"margin: 1em;\">\n",
     "    <p style=\"text-align: justify;\">\n",
-    "        The initial dataset consists of approximately 171,000 companies, each with a linked URL. However, during the web scraping process, some errors occurred, resulting in a final dataset of around\n",
-    "        150,000 companies. Despite this reduction, the dataset remains sufficiently large for training the classifier.\n",
+    "        The initial dataset consists of approximately 171,000 companies, each with a linked URL. However, during the web scraping process, some errors occurred, resulting in a final dataset of around 150,000 companies. Despite this reduction, the dataset remains sufficiently large for training the classifier.\n",
     "        <br>\n",
-    "        The first step was to assess whether the sample of companies exhibited a balanced distribution. To do so, we analyzed the number of employees and geographical distribution. The results indicate\n",
-    "        that the distribution of employees reflects the overall structure of Spanish companies, while the geographical distribution aligns with population density in Spain, with two major clusters of\n",
-    "        companies located in Madrid and Barcelona.\n",
+    "        The first step was to assess whether the sample of companies exhibited a balanced distribution. To do so, we analyzed the number of employees and geographical distribution. The results indicate that the distribution of employees reflects the overall structure of Spanish companies, while the geographical distribution aligns with population density in Spain, with two major clusters of companies located in Madrid and Barcelona.\n",
     "        <br>\n",
-    "        The most critical step was analyzing the distribution of CNAE codes at all four levels. At Level 1 (sections), we found that four out of the 21 categories account for more than two-thirds of the\n",
-    "        companies. A similar pattern emerges at the division level, where eight divisions comprise approximately 50% of the data. Since our goal is to develop a classifier for at least Level 3, we\n",
-    "        examined the number of companies per label. We found that 50% of the labels contain fewer than 183 companies. This trend persists at Level 4, where half of the labels have fewer than 74 companies.\n",
+    "        The most critical step was analyzing the distribution of CNAE codes at all four levels. At Level 1 (sections), we found that four out of the 21 categories account for more than two-thirds of the companies. A similar pattern emerges at the division level, where eight divisions comprise approximately 50% of the data. Since our goal is to develop a classifier for at least Level 3, we examined the number of companies per label. We found that 50% of the labels contain fewer than 183 companies. This trend persists at Level 4, where half of the labels have fewer than 74 companies.\n",
     "        <br>\n",
-    "        In conclusion, the dataset presents an unbalanced distribution in terms of CNAE codes, which must be considered during model training. However, the distributions of employees and geographical\n",
-    "        locations do not pose a concern, as they accurately reflect the structure of the Spanish economy, which is predominantly composed of small and mid-sized enterprises concentrated in the two main\n",
-    "        provinces. [1]\n",
+    "        A chi-squared test was conducted to assess the representativeness of the sample in terms of the distribution of CNAE codes at Level 2. The results show no significant difference between the sample distribution and the population distribution, indicating that the sample is representative of the population with respect to CNAE code distribution.\n",
+    "        <br>\n",
+    "        In conclusion, the dataset presents an unbalanced distribution in terms of CNAE codes, which must be considered during model training. However, the distributions of employees and geographical locations do not pose a concern, as they accurately reflect the structure of the Spanish economy, which is predominantly composed of small and mid-sized enterprises concentrated in the two main provinces. <a href = \"#ref-1\">[1]</a>\n",
     "    </p>\n",
     "</div>"
    ]
@@ -724,7 +786,7 @@
    "source": [
     "<h2 id=\"references\"><b>4. References</b></h2>\n",
     "<div style=\"margin: 1em;\">\n",
-    "    <p>\n",
+    "    <p id=\"ref-1\">\n",
     "        <b>[1]</b> <b>Ministerio de Industria, Comercio y Turismo</b>, <i>Estructura y Dinámica Empresarial en España 2023</i>, Ministerio de Industria, Comercio y Turismo, España, 2023.\n",
     "        <br>\n",
     "        &emsp; &ensp;[Online]. Available: \n",
@@ -752,7 +814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
